    - Added an even better tier of water electrolysis, using a Nitrogen-doped nickel-molybdenum-phosphide catalyst. Why? because i wouldnt be a good devman if i wasnt sitting here talking to you, now would i?
    - Added a more efficient way to make plastic pellets using yttrium catalysts.
    - Added polystyrene and polystyrene packaging, as a more efficient way to transport certain items.

  Changes:
    - Gave glass its own row of recipes, and moved science bottles there.
    - Changed vacuum tubes crafting time from 5 to 7 seconds, and CRT's from 20 to 28.
    - Changed the science pack requirements for Francium Ultracool Centrifugal Kabbalism, now requiring all prerequisite science packs as to lower confusion for new players.
    - Upped Magneto orbital traps glass input from 8 to 24.
    - Changed all recipes that use white phosphorous to red phosphorous, which was like 3 but still
    - Changed wiring to only need the metal and not another prerequisite item.
    - Gave big and behemoth biters fire resistance, and gave big and behemoth spitters acid/poison resistances.
    - Nerfed flamethrowers. Plus changed their usable fluids.
    - Buffed tier 4 producitvity modules to have 14% productivity instead of 12.
    - Remade molybdenite powder's icon.
    - Rerendered almost every item in the game to use HDRI's. WHERE HAVE THESE BEEN MY ENTIRE LIFE SWEET GOOGLILY
    - Changed stainless steel to also take molybdenum.
    - Changed all Multi-metals to only take their specific element and not an element + intermediate.
    - Redesigned Multi-metal item's icons.
    - Changed the crafting menu length to 12.
    - Made all alloy recipes for Multi-metals be faster than the non-alloy recipes.

  Fixes:
    - Fixed some wood-related recipes not being in the same place.
    - Fixed sulfur not being in the correct place.
    - Made some attempts to curb the file size, but idk chief im gonna have to split these into graphic mods soon